# Prometheus

./: LICENSE.txt  README.md  Train.py  Traintest.py  inferencetest2.py  pyproject.toml  setup.py
Model/: PrometheusModel.py
Prometheus/Model/: PrometheusModel.py
PrometheusCore/: Encoders.py  PrometheusModel.py  __init__.py
PrometheusCore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Test/: Traintest.py  Traintest2.py  Traintest3.py  TraintestFlick.py  TraintestFlick2.py  inferencetest.py  inferencetest2.py
