[project]
name = "PrometheusCore"
version = "0.3.0"
description = "Prometheus is a native multimodal model and Prometheus is based on the paper: Transfusion"
authors = [
    { name = "Rivera.ai/Fredy Rivera", email = "riveraaai200678@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "pillow",
    "av",
    "tqdm",
    "torchmetrics",
    "einops",
    "einx",
    "ema_pytorch",
    "rotary_embedding_torch",
    "tqdm",
    "jaxtyping",
    "beartype",
    "loguru",
    "torchdiffeq",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["PrometheusCore"]